Menu z-index fix

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11926,7 +11926,7 @@ button:focus {
   top: 1px;
   left: 12px;
   color: #8b8b8b;
-  z-index: 10;
+  z-index: 9;
   transition: 0.15s;
   transition-timing-function: cubic-bezier(0.22, 0.61, 0.35, 1);
 }
